--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hinário do Cadete</title>
+
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-    <header>
-        <h1>Hinário do Cadete</h1>
-        <p><i>By: Berwanger</i> </p>
+    <header class="main-header">
+        <img src="/img/pmpr.png" alt="PMPR" class="logo-header">
+
+        <div class="header-text-container">
+            <h1>Hinário do Cadete</h1>
+            <i class="creditos">By: Berwanger | Turma Cadetes 2026</i>
+        </div>
+
+        <img src="/img/apmg.png" alt="APMG" class="logo-header">
     </header>
 
     <main id="app">
