aplicativo finalizado com todos os hinos do hinario 2025

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
             <button onclick="abrirHino('soldado_de_fogo')">Hino Soldado do Fogo</button>
             <button onclick="abrirHino('fibra_heroi')">Fibra de Herói</button>
             <button onclick="abrirHino('avante_camaradas')">Avante Camaradas - Dobrado</button>
+            <button onclick="abrirHino('escola_ouro')">Canção Escola de Ouro</button>
+            <button onclick="abrirHino('tres_anos')">Canção Três Anos</button>
+            <button onclick="abrirHino('espadim')">Juramento Espadim</button>
+            <button onclick="abrirHino('espada')">Juramento Espada</button>
         </section>
 
         <section id="detalhe-hino" class="hidden">
