--- a/index.html
+++ b/index.html
@@ -12,19 +12,10 @@
     <link rel="shortcut icon" href="favicon/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="Hinário" />
-    <!-- <link rel="manifest" href="favicon/site.webmanifest" /> -->
+    <link rel="manifest" href="favicon/site.webmanifest" />
 
     <!-- Manifest, para transforar o APP em Progressive Web APP -->
-    <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#001f3f">
-
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js')
-                .then(() => console.log("App Pronto para uso Offline!"))
-                .catch((err) => console.log("Erro ao registrar App", err));
-        }
-    </script>
+    
 
     <!-- FIM PWA -->
 
