oracao do cadete incluida

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
     <main id="app">
         <section id="lista-hinos">
+            
+            <button onclick="abrirHino('oracao_cadete')">Oração do Cadete</button>
             <button onclick="abrirHino('brasil')">Hino Nacional</button>
             <button onclick="abrirHino('parana')">Hino do Paraná</button>
             <button onclick="abrirHino('apmg')">Hino da APMG</button>
