--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="header-text-container">
             <h1>Hinário do Cadete</h1>
-            <i class="creditos">By: Berwanger | Turma Cadetes 2026</i>
+            <i class="creditos">By: Berwanger | Turma 1º CFO 2026</i>
         </div>
 
         <img src="/img/apmg.png" alt="APMG" class="logo-header">
